Table users {
  id int [pk, increment, not null]
  email varchar(100) [not null, unique]
  password varchar(100) [not null]
  grade_id int [not null, default: 0, ref: > grades.id ]
  created_at datetime [not null, default: `now()`]
  updated_at "datetime default CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" [not null,note:'update time']
}

Table grades {
  id int [pk, increment, not null]
  grade_name varchar(100) [not null]
  created_at datetime [not null, default: `now()`]
  
}

Table corperation {
  id int [pk, increment, not null]
  category_id int [not null, ref: > categories.id]
  corperation_name varchar(300) [not null]
  image varchar(500) [not null]
  introduction varchar(250) [not null]
  url varchar(500) [null]
  field varchar(300) [not null]
  detail_introduction varchar(2500) [null]
  members_benefits varchar(250) [null]
  corperation_number varchar(500) [not null]
  introduction_file varchar(500) [null]
  place_id int [not null, ref: > places.id]
  created_at datetime [not null, default: `now()`]
  updated_at "datetime default CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" [not null,note:'update time']
}

Table categories {
  id int [pk, increment, not null]
  category_name varchar(200) [not null]
  detail_id int [not null, ref: > category_details.id]
}

Table category_details {
  id int [pk, increment, not null]
  detail_name varchar(200) [not null]
}

Table places {
  id int [pk, increment, not null]
  place_name varchar(50) [not null]
}

Table comments {
  id int [pk, increment, not null]
  users_id int [not null, ref: > users.id]
  content varchar(2500) [not null]
  secret int [not null, default: 0]
  created_at datetime [not null, default: `now()`]
  updated_at "datetime default CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" [not null,note:'update time']
}

Table replies {
  id int [pk, increment, not null]
  users_id int [not null, ref: > users.id]
  content varchar(2500) [not null]
  secret int [not null, default: 0]
  comment_id int [not null, ref: > comments.id]
  created_at datetime [not null, default: `now()`]
  updated_at "datetime default CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP" [not null,note:'update time']
}